tests/errors/spawnNotSendStruct.milo
// @error: cannot send 'u' of type 'Unsafe' across threads

from "std/runtime" import {
    Promise
}

struct Unsafe {
    p: *u8,
}

fn main(): i32 {
    unsafe {
        let u = Unsafe {
            p: 0 as *u8
        }
        let _t = Promise<i64>.blocking(move(): i64 => {
            print("bad: ", u.p as i64)
            return 0
        }
        )
    }
    return 0
}
